# FluidSim

./: .gitignore  CMakeLists.txt
include/: collision_solver.hpp  display_manager.hpp  physic_body.hpp  segment.hpp  solver.hpp  united_solver.hpp
lib/: CMakeLists.txt
lib/DynamicBlur/: CMakeLists.txt
lib/Swarm/: CMakeLists.txt
lib/Swarm/include/: worker.hpp
lib/Swarm/src/: worker.cpp
src/: CMakeLists.txt  display_manager.cpp  main.cpp
